--- a/boutique/medium/digital-numerique/last-of-the-big-tuskers/index.html
+++ b/boutique/medium/digital-numerique/last-of-the-big-tuskers/index.html
@@ -152,7 +152,7 @@
 
       <div>
         <h5 class="color tag"><a class="overscore" onclick="toggle_meta();">Digital Paintings</a><font class="fr">&nbsp;&#92;&nbsp;Peintures num&egrave;riques</font></h5>
-        <div class="clear" id="p-meta">
+        <div class="clear" id="product-meta">
           <p class="small">Art of<font class="fr">&nbsp;&#92;&nbsp;de</font> <i>Last of the Big Tuskers</i> (2018).</p>
 
         </div>
@@ -173,7 +173,7 @@
 
         <div class="clear-bottom">
           <h5><a class="overscore" onclick="toggle_0110_1111();">Digital Images</a><font class="fr">&nbsp;&#92;&nbsp;num&eacute;riques</font></h5>
-          <div class="clear" id="p-0110-1111">
+          <div class="clear" id="product-0110-1111">
             <p><font class="sku small">0110 1111</font></p>
             <p>Collection of<font class="fr">&nbsp;&#92;&nbsp;de</font> 7.</p>
 
@@ -237,8 +237,8 @@
       img_satao = document.getElementById("preview-satao"),
       img_tim = document.getElementById("preview-tim"),
       img_craig = document.getElementById("preview-craig"),
-      p_meta = document.getElementById( "p-meta" ),
-      p_0110_1111 = document.getElementById( "p-0110-1111" );
+      p_meta = document.getElementById( "product-meta" ),
+      p_0110_1111 = document.getElementById( "product-0110-1111" );
 
   r.style.setProperty('--us', "none");
   r.style.setProperty('--fr', "none");
