--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -79,21 +79,18 @@
 
       <div>
         <h5 class="color"><a class="color overscore" onclick="toggle_meta();">Comic Book</a><font class="fr">&nbsp;&#92;&nbsp;Bande dessin&eacute;e</font></h5>
-        <div class="clear" id="p-meta">
+        <div class="clear" id="product-meta">
           <!-- <p class="small">Designed with<font class="fr">&nbsp;&#92;&nbsp;Con&ccedil;u avec</font> .</p> -->
           <p class="small">Created in Canada.<font class="fr">&nbsp;&#92;&nbsp;Cr&eacute;&eacute; au Canada.</font></p>
           <h5 class="author">Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</h5>
 
         </div>
-        <p>Scheduled for December<font class="fr">&nbsp;&#92;&nbsp;Pr&eacute;vu pour d&eacute;cembre</font> 2024.</p>
-        <!-- <p>28 pages.</p> -->
+        <!-- <p>## pages.</p> -->
 
         <p class="linebreak">Journey with an elephant across a sea of sand: <i>White Elephant</i> is an e-book and a limited edition print that comes to life with a companion app. This publication is first in a series of scenes in wildlife art at Animat Habitat. <i>White Elephant</i>&mdash;the comic book is available for pre-order as a first-edition paperback.<font class="fr">&nbsp;&#92;&nbsp;Voyage avec un &eacute;l&eacute;phant &agrave; travers une mer de sable&nbsp;: <i>&Eacute;l&eacute;phant blanc</i> est un publication num&eacute;rique et une &eacute;dition limit&eacute;e qui prend vie avec l'application compagnon. Cette publication est la premi&egrave;re d'une s&eacute;rie de projets chez Animat Habitat. La bande dessin&eacute;e est pr&ecirc;t &agrave; pr&eacute;commander en tant que premi&egrave;re &eacute;dition broch&eacute;.</font></p>
 
-        <!-- <h5>UNESCO World Heritage Site:<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a href="../../url/unesco/1432/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Okavango Delta">Okavango Delta</a></h5> -->
-
-        <p class="linebreak">Language:<font class="fr">&nbsp;&#92;&nbsp;Langue&nbsp;:</font> En<font class="fr">&nbsp;&#92;&nbsp;An</font>, Fr, Ja<!--, Zh-HanT*--></p>
-        <!-- <p>Publication Date:<font class="fr">&nbsp;&#92;&nbsp;Date de parution&nbsp;:</font> 12.2024</p> -->
+        <p class="linebreak">Language:<font class="fr">&nbsp;&#92;&nbsp;Langue&nbsp;:</font> En<font class="fr">&nbsp;&#92;&nbsp;An</font>, Fr, Ja</p>
+        <p>Publication Date:<font class="fr">&nbsp;&#92;&nbsp;Date de parution&nbsp;:</font> &ndash;</p>
 
       </div>
 
@@ -101,7 +98,7 @@
 
         <div class="clear-bottom">
           <h5><a class="overscore" onclick="toggle_0101_0511();">E-book</a><font class="fr">&nbsp;&#92;&nbsp;Publication num&eacute;rique</font></h5>
-          <div class="clear" id="p-0101-0511">
+          <div class="clear" id="product-0101-0511">
             <p><font class="sku small">0101 0511</font></p>
 
           </div>
@@ -110,45 +107,19 @@
           <div class="clear small">
             <p class="lineend">All included formats:<font class="fr">&nbsp;&#92;&nbsp;Tous les formats inclus&nbsp;:</font> CBZ,&nbsp;EPUB,&nbsp;PDF</p>
 
-            <!-- Portable Document Format (.pdf) -->
-            <!-- Comic Book Archive (.cbz) -->
-            <!-- Electronic Publication (.epub) -->
-            <!-- Apple Book (.ibook) -->
-            <!-- Kindle Edition (.azw) -->
-
           </div>
 
           <p class="lineend">Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">15</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">12</font></font></p>
 
-          <!-- <p>Product Code:<font class="fr">&nbsp;&#92;&nbsp;Code produit&nbsp;:</font> <font class="sku">0101 0511</font></p> -->
+          <!-- <form></form> -->
 
-          <!-- <form class="paypal-ca" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-
-            <input type="hidden" name="cmd" value="_s-xclick">
-            <input type="hidden" name="hosted_button_id" value="DULA9DUNNAFKQ">
-
-            <input type="hidden" name="currency_code" value="CAD">
-
-            <button type="submit" name="submit" alt="White Elephant E-book via PayPal">Pre-order<font class="fr">&nbsp;&#92;&nbsp;Pr&eacute;-commander</font></button>
-          </form>
-
-          <form class="paypal-us" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-
-            <input type="hidden" name="cmd" value="_s-xclick">
-            <input type="hidden" name="hosted_button_id" value="Z2T2FB8FCWB74">
-
-            <input type="hidden" name="currency_code" value="USD">
-
-            <button type="submit" name="submit" alt="White Elephant E-book via PayPal">Pre-order<font class="fr">&nbsp;&#92;&nbsp;Pr&eacute;-commander</font></button>
-          </form>
-
-          <p class="linebreak small">Digital download is made available upon publication.<font class="fr">&nbsp;&#92;&nbsp;T&eacute;l&eacute;chargement num&eacute;rique est mis &agrave; disposition d&egrave;s la publication.</font></p> -->
+          <p class="linebreak small">Digital download is made available upon publication.<font class="fr">&nbsp;&#92;&nbsp;T&eacute;l&eacute;chargement num&eacute;rique est mis &agrave; disposition d&egrave;s la publication.</font></p>
 
         </div>
 
         <div class="clear-bottom">
           <h5><a class="overscore" onclick="toggle_0101_1511();">Full Color Paperback</a><font class="fr">&nbsp;&#92;&nbsp;Broch&eacute; en couleur</font></h5>
-          <div class="clear" id="p-0101-1511">
+          <div class="clear" id="product-0101-1511">
             <p><font class="sku small">0101 1511</font></p>
             <p>First edition.<font class="fr">&nbsp;&#92;&nbsp;Premi&egrave;re &eacute;dition</font></p>
 
@@ -330,26 +301,18 @@
 
       <p class="linebreak small"><font class="title">Igor &middot;&nbsp;Qumquat</font></p>
       <p class="small"><font class="small">Nick Brandt <i>On This Earth, A Shadow Falls</i> (book series, 2005, 2009)</font></p>
-      <!-- Igor (c - 2009) was killed by poachers for his ivory in Amboseli National Park, Kenya. -->
-      <!-- Qumquat (1969 - 2012) slaughtered by poachers along with her two young daughters close to the border of Amboseli National Park, Kenya. -->
 
       <p class="linebreak small"><font class="title">Satao</font></p>
       <p class="small"><font class="small">Tsavo Trust &ndash;&nbsp;Tsavo (c.1968-2014)</font></p>
-      <!-- Satao (c1964 - 2016) was killed by poachers for his ivory just outside Tsavo National Park, Kenya. -->
 
       <p class="linebreak small"><font class="title">Kamboyo &middot;&nbsp;Masthuele &middot;&nbsp;Isilo</font></p>
       <p class="small"><font class="small">James Currie <i>Last of the Big Tuskers</i> (documentary, 2018)</font></p>
-      <!-- Kamboyo (c - 2014) died of old age in Tsavo Conservation Area, Kenya. -->
-      <!-- Masthuele (c - 2014) died … in Kruger National Park, South Africa. -->
-      <!-- Isilo (c - 2017) died of old age in Tembe Elephant Park, South Africa. -->
 
       <p class="linebreak small"><font class="title">Mimi &middot;&nbsp;Athena</font></p>
       <p class="small"><font class="small">Mark Deeble and Victoria Stone <i>The Elephant Queen</i> (Apple TV&plus; original, 2018)</font></p>
-      <!-- Athena (c - 2018) was not seen again … . -->
 
       <p class="linebreak small"><font class="title">Tim</font></p>
       <p class="small"><font class="small">Amboseli Trust for Elephants &ndash;&nbsp;Amboseli (c.1970-2020)</font></p>
-      <!-- Tim (c - 2020) died of natural causes in Amboseli National Park, Kenya. -->
 
       <p class="linebreak small"><font class="title">Gaia</font></p>
       <p class="small"><font class="small">Elephants Without Borders &ndash;&nbsp;<i>Elephant</i> (Disney&plus; original, 2020)</font></p>
@@ -381,9 +344,9 @@
       img = document.getElementById( "preview" ),
       tmb = document.getElementById( "preview-thumbnail" ),
       num = document.getElementById( "scene" ),
-      p_meta = document.getElementById( "p-meta" ),
-      p_0101_0511 = document.getElementById( "p-0101-0511" ),
-      p_0101_1511 = document.getElementById( "p-0101-1511" );
+      p_meta = document.getElementById( "product-meta" ),
+      p_0101_0511 = document.getElementById( "product-0101-0511" ),
+      p_0101_1511 = document.getElementById( "product-0101-1511" );
 
   r.style.setProperty('--us', "none");
   r.style.setProperty('--fr', "none");
