--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -51,23 +51,11 @@
     </div>
   </header>
 
-  <!-- <div class="clear preview" id="preview">
-    <a onclick="toggle_preview();">
-      <section class="single">
-        <div class="text-center">
-          <img alt="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux. White Tiger oil painting. &ndash;&nbsp;peinture &agrave; l'huile." class="matte-preview" src="../../inc/img/boutique/02/white-tiger.2020.study.blur.720-360.jpg" />
-          <p class="linebreak"><i>White Tiger</i> &ndash; Taiga, Siberia<font class="fr">&nbsp;&#92;&nbsp;Sib&eacute;rie</font> (oil painting<font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font>, 2025)</p>
-        </div>
-
-      </section>
-    </a>
-  </div> -->
-
   <div class="clear-bottom preview-thumbnail" id="preview-thumbnail">
     <section class="single">
       <div class="clear-bottom">
         <!-- <a onclick="toggle_preview();"> -->
-          <!-- <img alt="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux. White Tiger oil painting. &ndash;&nbsp;peinture &agrave; l'huile." class="matte matte-fold" src="../../inc/img/boutique/02/white-tiger.2020.study.blur.720-360.jpg" /> -->
+
           <div class="matte matte-fold"><h4 class="color">Image coming soon.</h4></div>
 
         <!-- </a> -->
@@ -81,22 +69,15 @@
 
       <div>
         <h5 class="color"><a class="color overscore" onclick="toggle_meta();">Oil Painting</a><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font></h5>
-        <div class="clear" id="p-meta">
+        <div class="clear" id="product-meta">
           <p class="small">Painted with Gamblin artists colors on linen canvas. Created in Canada.<font class="fr">&nbsp;&#92;&nbsp;Peint avec des couleurs d'artistes Gamblin sur toile de lin. Cr&eacute;&eacute; au Canada.</font></p>
           <h5 class="author">Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</h5>
 
         </div>
-        <!-- <p>Exhibited in May<font class="fr">&nbsp;&#92;&nbsp;Expos&eacute; en mai&nbsp;:</font> 2025</p> -->
-        <p>Scheduled for May<font class="fr">&nbsp;&#92;&nbsp;Pr&eacute;vu pour mai</font> 2025.</p>
 
         <p class="linebreak"><i>White Tiger</i> is an oil painting of an Amur tiger in the taiga. This painting is photographed and reproduced in limited edition as an archival pigment print on acid-free archival paper, and printed with an inch unprinted matte to allow for framing options and safe handling. The archival pigment prints are available in two sizes. A digital copy of the corrected and edited photograph is also available.<font class="fr">&nbsp;&#92;&nbsp;<i>Tigre blanc</i> est une peinture &agrave; l'huile d’un tigre dans la ta&iuml;ga. Cette peinture est photographi&eacute;e et reproduite en &eacute;dition limit&eacute;e en tant que tirage pigmentaire d'archives sur du papier d'archivage sans acide, et imprim&eacute;e avec une mate d'un pouce non imprim&eacute;e pour permettre une manipulation en toute s&eacute;curit&eacute; ainsi que des options d'encadrement. Les tirages pigmentaires d'archives sont disponibles en deux tailles. Une copie num&eacute;rique de la photo corrig&eacute;e et &eacute;dit&eacute;e est &eacute;galement disponible.</font></p>
 
-        <!-- The digital download includes a range of resolutions. -->
-        <!-- Le t&eacute;l&eacute;chargement num&eacute;rique comprend une gamme de r&eacute;solutions. -->
-
-        <!-- <p class="stock">Digital copy and two print sizes available for pre-order with PayPal.<font class="fr">&nbsp;&#92;&nbsp;Copie num&eacute;rique et deux tailles de gicl&eacute;e pr&ecirc;t &agrave; pr&eacute;commander avec PayPal.</font></p> -->
-
-        <!-- <h5>UNESCO World Heritage Site:<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a class="score" href="../../url/unesco/1234/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Putorana Plateau">Putorana Plateau</a></h5> -->
+        <p class="linebreak">Exhibition Date:<font class="fr">&nbsp;&#92;&nbsp;Date d'exposition&nbsp;:</font> &ndash;</p>
 
       </div>
 
@@ -104,7 +85,7 @@
 
         <div>
           <h5><a class="overscore" onclick="toggle_0200_0011();">Oil Painting</a><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font></h5>
-          <div class="clear small" id="p-0200-0011">
+          <div class="clear small" id="product-0200-0011">
             <p><font class="sku">0200 0011</font></p>
 
           </div>
@@ -115,7 +96,7 @@
 
         <div>
           <h5><a class="overscore" onclick="toggle_0201_0111();">Digital Image</a><font class="fr">&nbsp;&#92;&nbsp;num&eacute;rique</font></h5>
-          <div class="clear small" id="p-0201-0111">
+          <div class="clear small" id="product-0201-0111">
             <p><font class="sku">0201 0111</font></p>
 
           </div>
@@ -123,13 +104,11 @@
           <p>File Format:<font class="fr">&nbsp;&#92;&nbsp;Format de fichier&nbsp;:</font> JPG</p>
           <p class="lineend">Price:<font class="fr">&nbsp;&#92;&nbsp;Prix&nbsp;:</font> <font class="paypal-ca">CA<font class="currency-symbol">&#36;</font><font class="price">2</font></font><font class="paypal-us">US<font class="currency-symbol">&#36;</font><font class="price">2</font></font></p>
 
-          <!-- <p class="linebreak small">Digital download is made available upon publication.<font class="fr">&nbsp;&#92;&nbsp;T&eacute;l&eacute;chargement num&eacute;rique est mis &agrave; disposition sur d&egrave;s la publication.</font></p> -->
-
         </div>
 
         <div class="clear-bottom">
           <h5><a class="overscore" onclick="toggle_0201_1111();">Limited Edition Gicl&eacute;e</a><font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
-          <div class="clear" id="p-0201-1111">
+          <div class="clear" id="product-0201-1111">
             <p><font class="sku small">0201 1111</font></p>
             <p>Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 250.</p>
 
@@ -183,7 +162,7 @@
 
         <div class="clear-bottom">
           <h5><a class="overscore" onclick="toggle_0201_1121();">Limited Edition Gicl&eacute;e</a><font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
-          <div class="clear" id="p-0201-1121">
+          <div class="clear" id="product-0201-1121">
             <p><font class="sku small">0201 1121</font></p>
             <p>Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 25.</p>
 
@@ -307,9 +286,6 @@
 
       <p class="linebreak small"><font class="title">Bloody Mary &middot;&nbsp;White Sky &middot;&nbsp;White Moon</font></p>
       <p class="small"><font class="small">Sooyong Park <i>Endangered Emperors of Siberia: The Fall of Three Generations</i> (film, 2003)</font></p>
-      <!-- Bloody Mary was killed by poachers. -->
-      <!-- White Sky was killed by poachers. -->
-      <!-- White Moon (and her first cub) were never seen again. -->
 
     </div>
 
@@ -326,11 +302,11 @@
       // img = document.getElementById( "preview" ),
       // tmb = document.getElementById( "preview-thumbnail" ),
       num = document.getElementById( "scene" ),
-      p_meta = document.getElementById( "p-meta" ),
-      p_0200_0011 = document.getElementById( "p-0200-0011" ),
-      p_0201_0111 = document.getElementById( "p-0201-0111" ),
-      p_0201_1111 = document.getElementById( "p-0201-1111" ),
-      p_0201_1121 = document.getElementById( "p-0201-1121" );
+      p_meta = document.getElementById( "product-meta" ),
+      p_0200_0011 = document.getElementById( "product-0200-0011" ),
+      p_0201_0111 = document.getElementById( "product-0201-0111" ),
+      p_0201_1111 = document.getElementById( "product-0201-1111" ),
+      p_0201_1121 = document.getElementById( "product-0201-1121" );
 
   r.style.setProperty('--us', "none");
   r.style.setProperty('--fr', "none");
