--- a/scene/zero/index.html
+++ b/scene/zero/index.html
@@ -78,16 +78,15 @@
 
       <div>
         <h5 class="color"><a class="color overscore" onclick="toggle_meta();">Oil Painting</a><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font></h5>
-        <div class="clear" id="p-meta">
+        <div class="clear" id="product-meta">
           <p class="small">Painted with P&eacute;b&eacute;o oil colors on canvas.<font class="fr">&nbsp;&#92;&nbsp;Peint avec des couleurs &agrave; l'huile P&eacute;b&eacute;o sur toile.</font></p>
           <h5 class="author">Art by<font class="fr">&nbsp;&#92;&nbsp;par</font> Dane Aleksander.</h5>
 
         </div>
-        <p>Exhibited in April<font class="fr">&nbsp;&#92;&nbsp;Expos&eacute; en avril</font> 2007.</p>
 
         <p class="linebreak"><i>White Rhino</i> is an oil painting that sets a serene landscape in Tanzania in contrast with an endangerment on the horizon for the northern white rhinoceros. The painting is regarded as a formative study at Animat Habitat where it started a conversation about the role we want to play in shaping the world we want to live in.<font class="fr">&nbsp;&#92;&nbsp;<i>Rhinoc&eacute;ros blanc</i> est une peinture &agrave; l'huile qui fixe un paysage serein en Tanzanie en contraste avec une menace &agrave; l'horizon pour le rhinoc&eacute;ros blanc. La peinture est consid&eacute;r&eacute;e comme l'&eacute;tude formative chez Animat Habitat o&ugrave; elle a commenc&eacute; une conversation sur la fa&ccedil;on dont nous voulons fa&ccedil;onner le monde dans lequel nous voulons vivre.</font></p>
 
-        <!-- <h5>UNESCO World Heritage Site:<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a href="../../url/unesco/39/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Ngorongoro Conservation Area">Ngorongoro Conservation Area</a></h5> -->
+        <p class="linebreak">Exhibited in April<font class="fr">&nbsp;&#92;&nbsp;Expos&eacute; en avril</font> 2007.</p>
 
       </div>
 
@@ -95,7 +94,7 @@
 
         <div class="clear-bottom">
           <h5><a class="overscore" onclick="toggle_0000_0011();">Oil Painting</a><font class="fr">&nbsp;&#92;&nbsp;Peinture &agrave; l'huile</font></h5>
-          <div class="clear" id="p-0000-0011">
+          <div class="clear" id="product-0000-0011">
             <p><font class="sku small">0000 0011</font></p>
 
           </div>
@@ -141,7 +140,6 @@
 
   <footer>
     <div class="quote">
-      <!-- <p class="small"> .<font class="fr">&nbsp;&#92;&nbsp;.</font></p> -->
 
     </div>
 
@@ -157,8 +155,8 @@
       img = document.getElementById( "preview" ),
       tmb = document.getElementById( "preview-thumbnail" ),
       num = document.getElementById( "scene" ),
-      p_meta = document.getElementById( "p-meta" ),
-      p_0000_0011 = document.getElementById( "p-0000-0011" );
+      p_meta = document.getElementById( "product-meta" ),
+      p_0000_0011 = document.getElementById( "product-0000-0011" );
 
   r.style.setProperty('--fr', "none");
 
