--- a/boutique/medium/giclee/isilo/index.html
+++ b/boutique/medium/giclee/isilo/index.html
@@ -75,7 +75,7 @@
 
       <div>
         <h5 class="color tag"><a class="overscore" onclick="toggle_meta();">Digital Painting</a><font class="fr">&nbsp;&#92;&nbsp;Peinture num&egrave;rique</font></h5>
-        <div class="clear" id="p-meta">
+        <div class="clear" id="product-meta">
           <p class="small">Art of<font class="fr">&nbsp;&#92;&nbsp;de</font> <i>Last of the Big Tuskers</i> (2018).</p>
 
         </div>
@@ -93,7 +93,7 @@
 
         <div class="clear-bottom">
           <h5><a class="overscore" onclick="toggle_0111_1111();">Limited Edition Gicl&eacute;e</a><font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
-          <div class="clear" id="p-0111-1111">
+          <div class="clear" id="product-0111-1111">
             <p><font class="sku small">0111 1111</font></p>
             <p>Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 100.</p>
 
@@ -153,7 +153,7 @@
 
         <div class="clear-bottom">
           <h5><a class="overscore" onclick="toggle_0111_1121();">Limited Edition Gicl&eacute;e</a><font class="fr">&nbsp;&#92;&nbsp;en &eacute;dition limit&eacute;e</font></h5>
-          <div class="clear" id="p-0111-1121">
+          <div class="clear" id="product-0111-1121">
             <p><font class="sku small">0111 1121</font></p>
             <p>Edition of<font class="fr">&nbsp;&#92;&nbsp;&Eacute;dition de</font> 10.</p>
 
@@ -234,9 +234,9 @@
       toggle_lang = 0,
       img = document.getElementById("preview"),
       tmb = document.getElementById("preview-thumbnail"),
-      p_meta = document.getElementById( "p-meta" ),
-      p_0111_1111 = document.getElementById( "p-0111-1111" ),
-      p_0111_1121 = document.getElementById( "p-0111-1121" );
+      p_meta = document.getElementById( "product-meta" ),
+      p_0111_1111 = document.getElementById( "product-0111-1111" ),
+      p_0111_1121 = document.getElementById( "product-0111-1121" );
 
   r.style.setProperty('--us', "none");
   r.style.setProperty('--fr', "none");
